--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 #root {
-  max-width: 1280px;
+  max-width: 90%;
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
@@ -39,4 +39,24 @@
 
 .read-the-docs {
   color: #888;
+}
+
+.main-container {
+  width: 100%;
+  min-height: 100vh;
+}
+
+.navigation-bar {
+  width: 100%;
+  padding: 1rem;
+
+}
+
+.logo{
+  background-color: transparent;
+}
+
+.logo img {
+  height: 40px;
+  width: auto;
 }
