--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,7 @@
 /** Header **/
 .navigationBar {
   width: 100%;
-  padding: 1rem;
+  padding: 1rem 0;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -54,12 +54,26 @@
   color: #ffffff;
 }
 
+.sign {
+  border: 1px solid #06ac01;
+  background-color: #07ac0117;
+  border-radius: 10px;
+  width: 105px;
+  height: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: all 0.5s ease-in-out;
+  cursor: pointer;
+}
+
 /** Dashboard **/
 .dashboardContainer {
   display: flex;
   justify-content: space-between;
+  width: 100%;
   height: 100%;
-  gap: 2rem;
+
   position: relative;
   color: #6c757d;
 }
@@ -122,7 +136,7 @@
 /** Right Panel **/
 .rightPanel {
   height: 100%;
-  flex: 0 0 70%;
+  flex: 0 0 69%;
   border-radius: 2rem;
   background-color: #1d1e2280;
   backdrop-filter: blur(34px);
@@ -155,6 +169,7 @@
   gap: 1rem;
   padding: 1rem;
   cursor: pointer;
+  transition: all 0.5s ease-in-out;
 }
 
 .button:hover {
@@ -186,6 +201,8 @@
   width: 100%;
   text-overflow: ellipsis;
   overflow: hidden;
+  transition: all 0.5s ease-in-out;
+  padding: 0.5rem;
 }
 
 .toneSelector select option {
@@ -210,6 +227,7 @@ select.button {
   background-repeat: no-repeat;
   background-position: right 0.75rem center;
   background-size: 16px;
+  transition: all 0.5s ease-in-out;
 }
 
 select.button:focus {
