--- a/src/App.css
+++ b/src/App.css
@@ -117,6 +117,7 @@
   border-radius: 2rem;
   background-color: #1d1e2280;
   backdrop-filter: blur(34px);
+  -webkit-backdrop-filter: blur(34px);
   position: relative;
 }
 
@@ -140,6 +141,7 @@
   border-radius: 2rem;
   background-color: #1d1e2280;
   backdrop-filter: blur(34px);
+  -webkit-backdrop-filter: blur(34px);
   position: relative;
 }
 
