feat: add search by name

--- a/src/components/Dashboard/LeftPanel/SearchAssets/SearchAssets.module.css
+++ b/src/components/Dashboard/LeftPanel/SearchAssets/SearchAssets.module.css
@@ -159,9 +159,16 @@
   color: #ffffff;
 }
 
+.assetName {
+  font-size: 12px;
+  color: #9ca3af;
+  margin-top: -2px;
+}
+
 .assetExchange {
   font-size: 12px;
   color: #6c757d;
+  margin-top: -2px;
 }
 
 .cryptoPrice {
