--- a/src/components/features/Dashboard/LeftPanel/LeftPanel.module.css
+++ b/src/components/features/Dashboard/LeftPanel/LeftPanel.module.css
@@ -45,3 +45,11 @@
   max-height: calc(100% - 7rem);
   box-sizing: border-box;
 }
+
+.assetDetails {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  padding: 16px;
+  overflow-y: auto;
+}
