--- a/src/components/common/Header/Auth/Login.module.css
+++ b/src/components/common/Header/Auth/Login.module.css
@@ -10,3 +10,20 @@
   transition: all 0.5s ease-in-out;
   cursor: pointer;
 }
+
+/* Media queries for responsive layout */
+@media (max-width: 768px) {
+  .sign {
+    width: 95px;
+    height: 45px;
+    font-size: 0.9rem;
+  }
+}
+
+@media (max-width: 576px) {
+  .sign {
+    width: 100%;
+    height: 40px;
+    font-size: 0.85rem;
+  }
+}
