--- a/src/components/common/Header/Nav/Nav.module.css
+++ b/src/components/common/Header/Nav/Nav.module.css
@@ -51,3 +51,32 @@
   transition: all 0.5s ease-in-out;
   cursor: pointer;
 }
+
+/* Media queries for responsive layout */
+@media (max-width: 992px) {
+  .nav {
+    gap: 2rem;
+  }
+}
+
+@media (max-width: 768px) {
+  .nav {
+    gap: 1.5rem;
+  }
+
+  .navItem {
+    gap: 0.5rem;
+  }
+}
+
+@media (max-width: 576px) {
+  .nav {
+    width: 100%;
+    justify-content: space-around;
+    gap: 0.5rem;
+  }
+
+  .navItem p {
+    font-size: 0.9rem;
+  }
+}
