--- a/src/components/features/Dashboard/RightPanel/RightPanelHeader/TraidarAgent/TraidarAgent.module.css
+++ b/src/components/features/Dashboard/RightPanel/RightPanelHeader/TraidarAgent/TraidarAgent.module.css
@@ -1,24 +1,40 @@
 .white {
   color: white;
+  font-size: 1.2rem;
+  margin: 0;
+  font-family: "Manrope", sans-serif;
 }
 
 .agentName {
   display: flex;
   gap: 0.5rem;
+  align-items: center;
+}
+
+.agentName img {
+  width: 20px;
+  height: 20px;
 }
 
 .traidarAgentContainer {
-  width: 100%;
   display: flex;
   align-items: center;
   gap: 1rem;
+  font-family: "Manrope", sans-serif;
+}
+
+.traidarAgentContainer p {
+  color: #9ca3af;
+  font-size: 0.875rem;
+  margin: 0;
+  font-family: "Manrope", sans-serif;
 }
 
 @media (max-width: 576px) {
   .traidarAgentContainer {
     flex-direction: column;
     justify-content: flex-start;
-    align-items: baseline;
-    padding-top: 0.5rem;
+    align-items: flex-start;
+    gap: 0.25rem;
   }
 }
